[gd_scene load_steps=7 format=2]

[ext_resource path="res://charter.gd" type="Script" id=1]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.0431373, 0.0431373, 0.0431373, 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.0745098, 0.0745098, 0.0745098, 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.0745098, 0.0745098, 0.0745098, 1 )

[node name="Main" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Song" type="AudioStreamPlayer" parent="."]
volume_db = -10.0

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TopBar" type="ColorRect" parent="."]
margin_right = 496.0
margin_bottom = 40.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FileDialog" type="FileDialog" parent="."]
margin_left = 528.0
margin_top = 24.0
margin_right = 843.0
margin_bottom = 311.0
window_title = "Open a File"
dialog_text = "Select Song"
mode = 0
access = 2
current_dir = "/Mega/Projects/BunFan/01_Development/Beat Banger Charting Tool"
current_path = "/Mega/Projects/BunFan/01_Development/Beat Banger Charting Tool/"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="."]
margin_left = 16.0
margin_top = 56.0
margin_right = 240.0
margin_bottom = 93.0
text = "Select Song"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Play" type="Button" parent="."]
margin_left = 16.0
margin_top = 432.0
margin_right = 120.0
margin_bottom = 469.0
text = "Play"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Stop" type="Button" parent="."]
margin_left = 136.0
margin_top = 432.0
margin_right = 240.0
margin_bottom = 469.0
text = "Stop"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ClearAll" type="Button" parent="."]
margin_left = 256.0
margin_top = 484.0
margin_right = 488.0
margin_bottom = 521.0
text = "Clear All"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ExportButton" type="Button" parent="."]
margin_left = 16.0
margin_top = 484.0
margin_right = 240.0
margin_bottom = 521.0
text = "Export chart.cfg"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="_BPM" type="Label" parent="."]
margin_left = 16.0
margin_top = 112.0
margin_right = 73.0
margin_bottom = 126.0
text = "BPM"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BpmField" type="LineEdit" parent="."]
margin_left = 16.0
margin_top = 130.0
margin_right = 240.0
margin_bottom = 154.0
custom_styles/normal = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="_Difficulty" type="Label" parent="."]
margin_left = 19.0
margin_top = 168.0
margin_right = 76.0
margin_bottom = 182.0
text = "Difficulty"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Difficulty" type="ItemList" parent="."]
margin_left = 19.0
margin_top = 190.0
margin_right = 240.0
margin_bottom = 235.0
mouse_default_cursor_shape = 2
custom_styles/bg = SubResource( 5 )
items = [ "EASY", null, false, "HARD", null, false ]
max_text_lines = 2
auto_height = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="_starting_note_type" type="Label" parent="."]
margin_left = 19.0
margin_top = 251.0
margin_right = 136.0
margin_bottom = 265.0
text = "Starting Note Type"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartingNoteType" type="ItemList" parent="."]
margin_left = 19.0
margin_top = 269.0
margin_right = 240.0
margin_bottom = 323.0
mouse_default_cursor_shape = 2
custom_styles/bg = SubResource( 5 )
items = [ "Z : Half Note", null, false, "X : Quater Note", null, false, "C : Eigth Note", null, false ]
max_text_lines = 2
auto_height = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="_z_spawn" type="Label" parent="."]
margin_left = 256.0
margin_top = 204.0
margin_right = 360.0
margin_bottom = 218.0
text = "Z SPAWN ARRAY"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="z_spawn_list" type="ItemList" parent="_z_spawn"]
margin_top = 20.0
margin_right = 232.0
margin_bottom = 84.0
custom_styles/bg = SubResource( 4 )
max_columns = 10
same_column_width = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="_x_spawn" type="Label" parent="."]
margin_left = 256.0
margin_top = 296.0
margin_right = 360.0
margin_bottom = 310.0
text = "X SPAWN ARRAY"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="x_spawn_list" type="ItemList" parent="_x_spawn"]
margin_top = 20.0
margin_right = 232.0
margin_bottom = 84.0
custom_styles/bg = SubResource( 4 )
max_columns = 10
same_column_width = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="_c_spawn" type="Label" parent="."]
margin_left = 256.0
margin_top = 388.0
margin_right = 360.0
margin_bottom = 402.0
text = "C SPAWN ARRAY"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="c_spawn_list" type="ItemList" parent="_c_spawn"]
margin_top = 20.0
margin_right = 232.0
margin_bottom = 84.0
custom_styles/bg = SubResource( 4 )
max_columns = 10
same_column_width = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="_current_difficulty" type="Panel" parent="."]
margin_left = 256.0
margin_top = 56.0
margin_right = 488.0
margin_bottom = 86.0
custom_styles/panel = SubResource( 2 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="label" type="Label" parent="_current_difficulty"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "Difficulty : Not Set"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="_current_beat" type="Panel" parent="."]
margin_left = 256.0
margin_top = 88.0
margin_right = 488.0
margin_bottom = 118.0
custom_styles/panel = SubResource( 3 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="label" type="Label" parent="_current_beat"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "Current Beat : None"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="_starting_note_type_label" type="Panel" parent="."]
margin_left = 256.0
margin_top = 120.0
margin_right = 488.0
margin_bottom = 150.0
custom_styles/panel = SubResource( 3 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="label" type="Label" parent="_starting_note_type_label"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "Starting Note Type : None"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="_last_note_type" type="Panel" parent="."]
margin_left = 256.0
margin_top = 152.0
margin_right = 488.0
margin_bottom = 182.0
custom_styles/panel = SubResource( 3 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="label" type="Label" parent="_last_note_type"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "Last Note Type : None"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="_error" type="Label" parent="."]
margin_left = 19.0
margin_top = 15.0
margin_right = 142.0
margin_bottom = 29.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "_Error_message"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="_file_name" type="Label" parent="."]
margin_left = 360.0
margin_top = 15.0
margin_right = 483.0
margin_bottom = 29.0
grow_horizontal = 0
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "_file_name"
align = 2
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="file_selected" from="FileDialog" to="." method="file_selected"]
[connection signal="button_up" from="Button" to="." method="select_song"]
[connection signal="button_up" from="Play" to="." method="button_play"]
[connection signal="button_up" from="Stop" to="." method="button_stop"]
[connection signal="button_up" from="ClearAll" to="." method="clear_all"]
[connection signal="button_up" from="ExportButton" to="." method="export_chart"]
[connection signal="item_selected" from="Difficulty" to="." method="difficulty_selected"]
[connection signal="item_selected" from="StartingNoteType" to="." method="starting_note_type_selected"]
